--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -17,7 +17,7 @@
             </div>
         </header>
         <main>
-            <div id="book"></div>
+            <iframe id="book"></iframe>
         </main>
         <footer>
             <div class="navigation">
