--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -17,7 +17,7 @@
             </div>
         </header>
         <main>
-            <iframe id="book"></iframe>
+            <iframe id="book" sandbox="allow-same-origin"></iframe>
         </main>
         <footer>
             <div class="navigation">
