inject header and footer into book iframe

--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -2,30 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Basalt eBook Reader</title>
+        <title>Basalt eBook Reader: Library</title>
         <link rel="stylesheet" href="basalt.css">
-        <script src="jszip.min.js"></script>
-        <script src="epub.min.js"></script>
+        <script src="libraries/jszip.min.js"></script>
+        <script src="libraries/epub.min.js"></script>
     </head>
     <body>
-        <header>
-            <input type="file" id="choosefile"> <!-- For debug -->
-            <div class="navigation">
-                <input type="button" value="Previous" onclick="prevSection()">
-                <select class="tocDropdown" onchange="openSection(this.value)"></select>
-                <input type="button" value="Next" onclick="nextSection()">
-            </div>
-        </header>
-        <main>
-            <iframe id="book"></iframe>
-        </main>
-        <footer>
-            <div class="navigation">
-                <input type="button" value="Previous" onclick="prevSection()">
-                <select class="tocDropdown" onchange="openSection(this.value)"></select>
-                <input type="button" value="Next" onclick="nextSection()">
-            </div>
-        </footer>
+        <iframe id="book" src="library.html"></iframe>
         <script src="basalt.js"></script>
     </body>
 </html>
