--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="basalt.css">
         <script src="libraries/jszip.min.js"></script>
         <script src="libraries/epub.min.js"></script>
+        <template id="navtemplate">
+            <div>
+                <input type="button" value="Previous" onclick="parent.prevSection()">
+                <select onchange="parent.displaySection(this.value)"></select>
+                <input type="button" value="Next" onclick="parent.nextSection()">
+            </div>
+        </template>
+        <template id="closebuttontemplate">
+            <input type="button" value="Close book" onclick="parent.closeBook()">
+        </template>
     </head>
     <body>
         <iframe id="book" src="library.html"></iframe>
