comply with CSP by removing inline javascript

--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -8,13 +8,13 @@
         <script src="libraries/epub.min.js"></script>
         <template id="navtemplate">
             <nav>
-                <input type="button" value="Previous" onclick="parent.prevSection()">
-                <select onchange="parent.displaySection(this.value)"></select>
-                <input type="button" value="Next" onclick="parent.nextSection()">
+                <input type="button" value="Previous">
+                <select></select>
+                <input type="button" value="Next">
             </nav>
         </template>
         <template id="closebuttontemplate">
-            <input type="button" value="Close book" onclick="parent.closeBook()">
+            <input type="button" value="Close book">
         </template>
     </head>
     <body>
