start lightningcss-based style-optimization

--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Basalt eBook Reader: Library</title>
         <link rel="stylesheet" href="basalt.css">
-        <script src="libraries/jszip.min.js"></script>
-        <script src="libraries/epub.min.js"></script>
+        <script src="libraries/jszip/jszip.min.js"></script>
+        <script src="libraries/epub.js/epub.min.js"></script>
         <template id="navtemplate">
             <nav>
                 <input type="button" value="Previous">
