add return-to-top button to footer

--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -16,6 +16,9 @@
         <template id="closebuttontemplate">
             <input type="button" value="Close book">
         </template>
+        <template id="returntotoptemplate">
+            <input type="button" value="Return to top">
+        </template>
     </head>
     <body>
         <iframe id="book" src="library.html"></iframe>
