switch string-construction to template literals

--- a/src/reader/library.html
+++ b/src/reader/library.html
@@ -6,7 +6,15 @@
         <link rel="stylesheet" href="library.css"> 
     </head>
     <body>
-        <input type="file" id="choosefile"> <!-- For testing; replace with something nicer -->
+        <header>
+            <input type="button" value="Placeholder">
+        </header>
+        <main>
+            <input type="file" id="choosefile"> <!-- For testing; replace with something nicer -->
+        </main>
+        <footer>
+            <input type="button" value="Placeholder">
+        </footer>
         <script src="library.js"></script>
     </body>
 </html>
