set up basic dynamic library-building

--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -21,7 +21,7 @@
         </template>
     </head>
     <body>
-        <iframe id="book" src="library.html"></iframe>
+        <iframe id="book"></iframe>
         <script src="basalt.js"></script>
     </body>
 </html>
