--- a/src/reader/library.html
+++ b/src/reader/library.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Basalt eBook Reader</title>
-        <link rel="stylesheet" href="library.css"> 
+        <link rel="stylesheet" href="library.css">
     </head>
     <body id="dropzone">
         <header>
-            <input type="button" value="Placeholder">
+            <input type="button" value="Reopen book" id="reopenbook">
         </header>
         <main>
             <section>
