add style editor buttons

--- a/src/reader/basalt.html
+++ b/src/reader/basalt.html
@@ -16,6 +16,9 @@
         <template id="closebuttontemplate">
             <input type="button" value="Close book">
         </template>
+        <template id="styleeditortemplate">
+            <input type="button" value="Style editor">
+        </template>
         <template id="returntotoptemplate">
             <input type="button" value="Return to top">
         </template>
