--- a/src/reader/library.html
+++ b/src/reader/library.html
@@ -7,6 +7,7 @@
     <body id="dropzone">
         <header>
             <input type="button" value="Reopen book" id="reopenbook">
+            <input type="button" value="Style editor" id="styleeditor">
         </header>
         <main>
             <section>
