--- a/src/reader/library.html
+++ b/src/reader/library.html
@@ -7,15 +7,17 @@
     <body id="dropzone">
         <header>
             <input type="button" value="Reopen book" id="reopenbook">
-            <input type="button" value="Style editor" id="styleeditor">
+            <input type="button" value="Open style editor" id="styleeditorbutton">
         </header>
         <main>
-            <section>
-                <button type="button" name="Open File" id="openfile">
-                    <p>+</p>
-                    <input type="file" id="openfileinput">
-                </button>
-                <p>Open a new file.</p>
+            <section id="library">
+                <section>
+                    <button type="button" name="Open File" id="openfile">
+                        <p>+</p>
+                        <input type="file" id="openfileinput">
+                    </button>
+                    <p>Open a new file.</p>
+                </section>
             </section>
         </main>
         <footer>
